[Fix] Make text in pre and code elements visible

--- a/styles/index.css
+++ b/styles/index.css
@@ -87,11 +87,11 @@ li {
 }
 
 code {
-    @apply bg-gray-700 text-gray-700 p-1 text-sm;
+    @apply bg-gray-400 text-red-700 p-1 text-sm;
 }
 
 pre {
-    @apply w-full bg-gray-700 p-2 my-4;
+    @apply w-full bg-gray-400 p-2 my-4;
 }
 
 h2:after {
